--- a/my_app/package.json
+++ b/my_app/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "lund-map-service",
+  "name": "Lund Web Mapping Application",
   "version": "1.0.0",
-  "description": "A web map service for Lund using OpenLayers.",
-  "main": "main.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "ol": "^7.0.0"  
-  },
-  "devDependencies": {
-    "vite": "^4.0.0"
-  },
-  "keywords": ["web mapping", "Lund", "OpenLayers", "NodeJS"],
-  "author": "Your Name",
-  "license": "ISC"
+    "ol": "^latest",
+    "vite": "^latest"
+  }
 }
